--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,25 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    %div{ calss: "navbar navbar-inverse navbar-fixed-top" }
+      .container
+        .navbar-header
+          %button{ class: "navbar-toggle collapsed", 
+					        "data-toggle" => "collapsed",
+									"data-target" => "#navbar",
+									"aria-expanded" => "false",
+									"aria-contrlols" => "navbar"}
+            %span{ class: "sr-only" } Toggle navigation
+            %span{ class: "icon-bar" }
+            %span{ class: "icon-bar" }
+            %span{ class: "icon-bar" }
+          %a{ class: "navbar-brand", href: "#" } 读觅
+        #navbar{ class: "collapse collapse navbar-collapse" }												
+          %ul{ class: "nav navbar-nav" }
+            %li{ class: "active" } 
+              %a{ href: "#" } 好地方
+            %li{ class: "" } 
+              %a{ href: "#" } API
+            %li{ class: "" } 
+              %a{ href: "#" } 关于
     = yield
