--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
         #navbar{ class: "collapse collapse navbar-collapse" }												
           %ul{ class: "nav navbar-nav" }
             %li{ class: "active" } 
-              %a{ href: "#" } 好地方
+              = link_to "好地方", places_path
             %li{ class: "" } 
               %a{ href: "#" } API
             %li{ class: "" } 
