--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,6 @@
  *= require_tree .
  *= require_self
  */
-<<<<<<< HEAD
 .active{
 	background-color: #eee;
 }
@@ -21,5 +20,16 @@
 .main-board{
   padding: 0 5%;	
 }
-=======
->>>>>>> b7f7b50afb90b5c2c98eee9b561b30b5b4105590
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+    padding-left: 0;
+  }
+
+  ul li {
+    line-height: 20px;
+  }
+}
