--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -1,2 +1,17 @@
-%h1 Index
-    
+.container
+  = if notice
+    %div{ class: "alert alert-success" } 
+      = notice
+  %ul{ class: "list-group places-list" }
+    = @places.each do |place|
+      %li{ class: "list-group-item" }
+        = link_to place.name, place
+        = button_to "删除", place, method: :delete, class: "btn btn-danger", data: { confirm: "确定要删除吗？" }
+        = button_to "编辑", edit_place_path(place), method: :get, class: "btn btn-primary btn-small"
+        %hr
+        %p= "营业时间：" + place.business_hours 
+        %p= "简述：" + place.description
+
+  = will_paginate @places
+
+
