--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -1,2 +1,15 @@
-%h1 Places#show
-%p Find me in app/views/places/show.html.erb
+.container
+  = if notice
+    %div{ class: "alert alert-success" } 
+      = notice
+  %div{ class: "panel panel-primary place-panel" }
+    .panel-heading= @place.name
+    .panel-body
+      %p= @place.description
+      %p= "营业时间：" + @place.business_hours
+      = image_tag(@place.picture.url)
+      = @place.html_desc.html_doc.html_safe
+      = hidden_field_tag "place_longitude", @place.longitude
+      = hidden_field_tag "place_latitude", @place.latitude
+      #mapContainer 
+        %p 地图加载中...
