Dumi Place's api, compeleted
1. customize validation's error message in chinese.
2. add rspec for place's update and destroy action.
3. complete place's index and show api.

--- a/app/assets/stylesheets/places.css
+++ b/app/assets/stylesheets/places.css
@@ -510,6 +510,7 @@ section#place-editor .simditor {
 .place-panel img {
   width: 100%;
   overflow: hidden;
+  margin-bottom: 20px;
 }
 
 /* List group */
@@ -536,6 +537,7 @@ section#place-editor .simditor {
 
 /* Map Container*/
 #mapContainer {
+  margin-top: 10px;
   height: 500px;
   width: 100%;
 }
