Dumi add columns to Place
add author and view_times to places

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
             %li{ class: "active" } 
               = link_to "好地方", places_path
             %li{ class: "" } 
-              %a{ href: "#" } API
+              %a{ href: "/apidoc" } API
             %li{ class: "" } 
               %a{ href: "#" } 关于
     = yield
