--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -11,6 +11,7 @@
         %hr
         %p= "营业时间：" + place.business_hours 
         %p= "简述：" + place.description
+        %p= "#{place.view_times} 次阅读"
   = will_paginate @places
 
 
