--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -5,8 +5,10 @@
   %div{ class: "panel panel-primary place-panel" }
     .panel-heading= @place.name
     .panel-body
+      %p= "作者：" + @place.author
       %p= @place.description
       %p= "营业时间：" + @place.business_hours
+      %p= "#{@place.view_times} 次阅读"
       = image_tag(@place.picture.url)
       = @place.html_doc.html_safe
       = hidden_field_tag "place_longitude", @place.longitude
