--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -11,8 +11,8 @@
         = button_to "删除", place, method: :delete, class: "btn btn-danger", data: { confirm: "确定要删除吗？" }
         = button_to "编辑", edit_place_path(place), method: :get, class: "btn btn-primary btn-small"
         %hr
-        %p= "营业时间：" + place.business_hours 
-        %p= "简述：" + place.description
+        %p= "营业时间：" + place.business_hours if place.business_hours
+        %p= "简述：" + place.description if place.description
         %p= "#{place.view_times} 次阅读"
   = will_paginate @places
 
