--- a/app/assets/stylesheets/html_desc.css
+++ b/app/assets/stylesheets/html_desc.css
@@ -1,4 +1,5 @@
-/* =require bootstrap_and_overrides
+/* =require bootstrap */
+/* =require bootstrap-responsive */
 /* = require simditor */
 /**
  * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
