--- a/app/assets/stylesheets/html_desc.css
+++ b/app/assets/stylesheets/html_desc.css
@@ -1,5 +1,5 @@
-/* =require bootstrap */
-/* =require bootstrap-responsive */
+/* =require bootstrap.min */
+/* =require bootstrap-responsive.min */
 /* = require simditor */
 /**
  * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
