--- a/app/assets/stylesheets/places.css
+++ b/app/assets/stylesheets/places.css
@@ -1,5 +1,5 @@
-/* =require bootstrap */
-/* =require bootstrap-responsive */
+/* =require bootstrap.min */
+/* =require bootstrap-responsive.min */
 
 /* Input */
 .input-group {
